--- a/CSS/position.css
+++ b/CSS/position.css
@@ -2,11 +2,24 @@
 {height: 500px;
 width: 400px;
 border: 5px  dotted black;}
+
 #red_box{background-color: red;}
 #green_box{background-color: green;}
 #blue_box{background-color: blue;}
+
 #im_fixed{top: 10px; 
 right: 10px;
 position: fixed;}
+
 #im_relative{left: 40px;
 position: relative;}
+
+#im_relative_parent{
+    position: relative;
+}
+
+#im_absolute{
+    position: absolute;
+    left: 200px;
+    top: 100px;
+}
